--- a/Plugin/packages.config
+++ b/Plugin/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="asio-cpp" version="1.10.2.0" targetFramework="native" />
+  <package id="asio-cppp-latest" version="1.12.2" targetFramework="native" />
 </packages>
