--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -401,8 +401,9 @@
     <ClCompile Include="App\SoundplayerApp.cpp" />
     <ClCompile Include="App\InputHandler.cpp" />
     <ClCompile Include="App\QuickSoundHandler.cpp" />
-    <ClCompile Include="App\NetworkAudioHandler.cpp" />
+    <ClCompile Include="App\NetworkAudioHandlerImpl.cpp" />
     <ClCompile Include="Gui\ConfigDialog.cpp" />
+    <ClCompile Include="Gui\OverlayWindow.cpp" />
     <ClCompile Include="Util\Config.cpp" />
     <ClCompile Include="exe\main.cpp" />
     <ClCompile Include="Gui\AudioProcessorDialog.cpp" />
@@ -432,11 +433,13 @@
     <ClCompile Include="Web\FileSync.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App\NetworkAudioHandlerImpl.h" />
     <ClInclude Include="App\SoundplayerApp.h" />
     <ClInclude Include="App\InputHandler.h" />
     <ClInclude Include="App\QuickSoundHandler.h" />
     <ClInclude Include="App\NetworkAudioHandler.h" />
     <ClInclude Include="Gui\ConfigDialog.h" />
+    <ClInclude Include="Gui\OverlayWindow.h" />
     <ClInclude Include="Util\Config.h" />
     <ClInclude Include="Gui\AudioProcessorDialog.h" />
     <ClInclude Include="Gui\DlgScrollable.h" />
