--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -402,6 +402,7 @@
     <ClCompile Include="App\InputHandler.cpp" />
     <ClCompile Include="App\QuickSoundHandler.cpp" />
     <ClCompile Include="App\NetworkAudioHandlerImpl.cpp" />
+    <ClCompile Include="App\CommandLineInterface.cpp" />
     <ClCompile Include="Gui\ConfigDialog.cpp" />
     <ClCompile Include="Gui\OverlayWindow.cpp" />
     <ClCompile Include="App\UpdateHandler.cpp" />
@@ -439,6 +440,7 @@
     <ClInclude Include="App\InputHandler.h" />
     <ClInclude Include="App\QuickSoundHandler.h" />
     <ClInclude Include="App\NetworkAudioHandler.h" />
+    <ClInclude Include="App\CommandLineInterface.h" />
     <ClInclude Include="Gui\ConfigDialog.h" />
     <ClInclude Include="Gui\OverlayWindow.h" />
     <ClInclude Include="App\UpdateHandler.h" />
