--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClInclude Include="App\UpdateHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="App\CommandLineInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -293,6 +296,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="App\UpdateHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="App\CommandLineInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
