--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -194,6 +194,9 @@
     <ClInclude Include="App\CommandLineInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Util\TsHelperFunctions.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
