--- a/Plugin/packages.config
+++ b/Plugin/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="asio-cppp-latest" version="1.12.2" targetFramework="native" />
+  <package id="nlohmann.json" version="3.9.0" targetFramework="native" />
 </packages>
