- refactor - Wave -> Audio (directory rename)

--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -416,7 +416,7 @@
     <ClCompile Include="Gui\OverlayWindow.cpp" />
     <ClCompile Include="App\UpdateHandler.cpp" />
     <ClCompile Include="Twitch\TwitchChat.cpp" />
-    <ClCompile Include="Wave\MediaFoundationReader.cpp" />
+    <ClCompile Include="Audio\MediaFoundationReader.cpp" />
     <ClCompile Include="Util\Config.cpp" />
     <ClCompile Include="exe\main.cpp" />
     <ClCompile Include="Gui\AudioProcessorDialog.cpp" />
@@ -434,17 +434,17 @@
     <ClCompile Include="App\HotkeyHandler.cpp" />
     <ClCompile Include="Util\Log.cpp" />
     <ClCompile Include="Util\Util.cpp" />
-    <ClCompile Include="Wave\AudioBuffer.cpp" />
-    <ClCompile Include="Wave\AudioClipSample.cpp" />
-    <ClCompile Include="Wave\AudioDecoder.cpp" />
-    <ClCompile Include="Wave\AudioFilter.cpp" />
-    <ClCompile Include="Wave\AudioPlayer.cpp" />
-    <ClCompile Include="Wave\AudioProcessing.cpp" />
-    <ClCompile Include="Wave\AudioProcessor.cpp" />
-    <ClCompile Include="Wave\AudioRecorder.cpp" />
-    <ClCompile Include="Wave\OnlineMicophone.cpp" />
-    <ClCompile Include="Wave\PitchShiftFilter.cpp" />
-    <ClCompile Include="Wave\wave.cpp" />
+    <ClCompile Include="Audio\AudioBuffer.cpp" />
+    <ClCompile Include="Audio\AudioClipSample.cpp" />
+    <ClCompile Include="Audio\AudioDecoder.cpp" />
+    <ClCompile Include="Audio\AudioFilter.cpp" />
+    <ClCompile Include="Audio\AudioPlayer.cpp" />
+    <ClCompile Include="Audio\AudioProcessing.cpp" />
+    <ClCompile Include="Audio\AudioProcessor.cpp" />
+    <ClCompile Include="Audio\AudioRecorder.cpp" />
+    <ClCompile Include="Audio\OnlineMicophone.cpp" />
+    <ClCompile Include="Audio\PitchShiftFilter.cpp" />
+    <ClCompile Include="Audio\wave.cpp" />
     <ClCompile Include="Web\FileSync.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -471,14 +471,14 @@
     <ClInclude Include="Gui\WindowUtil.h" />
     <ClInclude Include="Util\InputStream.h" />
     <ClInclude Include="Util\RunLoop.h" />
-    <ClInclude Include="Wave\AudioFilter.h" />
-    <ClInclude Include="Wave\AudioFilterTypes.h" />
-    <ClInclude Include="Wave\AudioProcessing.h" />
-    <ClInclude Include="Wave\FilterBuffer.h" />
-    <ClInclude Include="Wave\FourierUtils.h" />
-    <ClInclude Include="Wave\MediaFoundationReader.h" />
-    <ClInclude Include="Wave\PitchFilter.h" />
-    <ClInclude Include="Wave\PitchShiftFilter.h" />
+    <ClInclude Include="Audio\AudioFilter.h" />
+    <ClInclude Include="Audio\AudioFilterTypes.h" />
+    <ClInclude Include="Audio\AudioProcessing.h" />
+    <ClInclude Include="Audio\FilterBuffer.h" />
+    <ClInclude Include="Audio\FourierUtils.h" />
+    <ClInclude Include="Audio\MediaFoundationReader.h" />
+    <ClInclude Include="Audio\PitchFilter.h" />
+    <ClInclude Include="Audio\PitchShiftFilter.h" />
     <ClInclude Include="Web\Http.h" />
     <ClInclude Include="Gui\InputObserverDialog.h" />
     <ClInclude Include="KeyboardHook\KeyboardHookUtils.h" />
@@ -496,17 +496,17 @@
     <ClInclude Include="App\HotkeyHandler.h" />
     <ClInclude Include="Util\TSSoundPlayer.h" />
     <ClInclude Include="Util\Util.h" />
-    <ClInclude Include="Wave\AudioBuffer.h" />
-    <ClInclude Include="Wave\AudioClipSample.h" />
-    <ClInclude Include="Wave\AudioDecoder.h" />
-    <ClInclude Include="Wave\AudioPlayer.h" />
-    <ClInclude Include="Wave\AudioProcessor.h" />
-    <ClInclude Include="Wave\AudioRecorder.h" />
-    <ClInclude Include="Wave\MP3Player.h" />
-    <ClInclude Include="Wave\OnlineMicrophone.h" />
-    <ClInclude Include="Wave\SignalProcessing.h" />
-    <ClInclude Include="Wave\Steganography.h" />
-    <ClInclude Include="Wave\wave.h" />
+    <ClInclude Include="Audio\AudioBuffer.h" />
+    <ClInclude Include="Audio\AudioClipSample.h" />
+    <ClInclude Include="Audio\AudioDecoder.h" />
+    <ClInclude Include="Audio\AudioPlayer.h" />
+    <ClInclude Include="Audio\AudioProcessor.h" />
+    <ClInclude Include="Audio\AudioRecorder.h" />
+    <ClInclude Include="Audio\MP3Player.h" />
+    <ClInclude Include="Audio\OnlineMicrophone.h" />
+    <ClInclude Include="Audio\SignalProcessing.h" />
+    <ClInclude Include="Audio\Steganography.h" />
+    <ClInclude Include="Audio\wave.h" />
     <ClInclude Include="Web\FileSync.h" />
   </ItemGroup>
   <ItemGroup>
